Fixed cover image sizing on mobile.

--- a/assets/css/layouts/cover.css
+++ b/assets/css/layouts/cover.css
@@ -5,10 +5,22 @@
   background-size: cover;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 .cover__intro {
   color: #F7EBE8;
   text-align: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .cover {
+    height: calc(100vh - 72px);
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .cover {
+    height: calc(100vh - 104px);
+  }
 }
